(executable
 (name      pp)
 (modules   pp)
 (libraries ppx_bsx.lib ppxlib))

(rule
 (targets test.actual.ml)
 (deps (:pp pp.exe) (:input test.ml))
 (action (run ./%{pp} --impl %{input} -o %{targets})))

(alias
 (name runtest)
 (action (diff test.expected.ml test.actual.ml)))

(test
 (name test)
 (modules test)
 (preprocess (pps ppx_bsx.lib)))
